formatting issue for Github pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="card">
         <div class="image">
           <div class="circle"></div>
-          <img src="/assets/person.svg" alt="person">
+          <img src="assets/person.svg" alt="person">
         </div>
         <div class="info">
           <h1 class="title">Hey, I'm Jim &#128075</h1>
@@ -36,25 +36,25 @@
       <div class="social-buttons">
         <a href="https://github.com/JamesSafford" target=”_blank” style="text-decoration:none"> 
           <div class="social-card">
-            <img class="social-card-image" src="/assets/github.svg" alt="github" >
+            <img class="social-card-image" src="assets/github.svg" alt="github" >
             <h3>See my work on GitHub</h3>
           </div>
         </a>
         <a href="mailto:jamesfsafford@gmail.com" target=”_blank” style="text-decoration:none";> 
           <div class="social-card">
-            <img class="social-card-image" src="/assets/email.svg" alt="email">
+            <img class="social-card-image" src="assets/email.svg" alt="email">
             <h3>Drop me an email</h3>
           </div>
         </a>
         <a href="https://www.linkedin.com/in/james-safford/" target=”_blank” style="text-decoration:none"> 
           <div class="social-card">
-            <img class="social-card-image" src="/assets/linkedin.svg" alt="linkedin">
+            <img class="social-card-image" src="assets/linkedin.svg" alt="linkedin">
             <h3>Say hello on LinkedIn</h3>
           </div>
         </a>
         <a href="https://twitter.com/Jim_Safford" target=”_blank” style="text-decoration:none"> 
           <div class="social-card">
-            <img class="social-card-image" src="/assets/twitter.svg" alt="twitter">
+            <img class="social-card-image" src="assets/twitter.svg" alt="twitter">
             <h3>Follow me on Twitter</h3>
           </div>
         </a>
@@ -68,9 +68,9 @@
     <h1 class="title">Here's a snapshot of my previous experiences</h1>
   <div class="work">
     <div class="caseStudy">
-      <div class="studyImage" style="background-image:url(/assets/address-history.png);"></div>
+      <div class="studyImage" style="background-image:url(assets/address-history.png);"></div>
       <div class="studyInfo">
-        <img class="logo" src="/assets/Habito.png" alt="Habito">
+        <img class="logo" src="assets/Habito.png" alt="Habito">
         <h4>Reducing keying errors </h4>
         <p>Preventing keying errors in mortgage applications by redesigning the submission process.</p>
       </div>
@@ -88,9 +88,9 @@
     </div>
 
     <div class="caseStudy">
-      <div class="studyImage"style="background-image:url(/assets/controls.png);"></div>
+      <div class="studyImage"style="background-image:url(assets/controls.png);"></div>
       <div class="studyInfo">
-        <img class="logo" src="/assets/Habito.png" alt="Habito">
+        <img class="logo" src="assets/Habito.png" alt="Habito">
         <h4>Scalable task management </h4>
         <p>Building a scalable task management tool for operational efficiency in the mortgage application process.</p>
       </div>
@@ -107,9 +107,9 @@
   </div>
 
   <div class="caseStudy">
-    <div class="studyImage"style="background-image:url(/assets/flavourite-landingpage.png);"></div>
+    <div class="studyImage"style="background-image:url(assets/flavourite-landingpage.png);"></div>
     <div class="studyInfo">
-      <img class="logo" src="/assets/Flavourite.png" alt="Flavourite">
+      <img class="logo" src="assets/Flavourite.png" alt="Flavourite">
       <h4>Making recipes smarter </h4>
       <p>Aggregating menus from the best restaurants, splitting them out by ingredient and making them searchable.</p>
     </div>
@@ -127,9 +127,9 @@
 </div>
 
   <div class="caseStudy">
-    <div class="studyImage"style="background-image:url(/assets/Leelo-screen1.png);"></div>
+    <div class="studyImage"style="background-image:url(assets/Leelo-screen1.png);"></div>
     <div class="studyInfo">
-      <img class="logo" src="/assets/Leelo.png" alt="Leelo">
+      <img class="logo" src="assets/Leelo.png" alt="Leelo">
       <h4>Building a charity app </h4>
       <p>Making climate donations work for both the charity and the donor.</p>
     </div>
@@ -147,10 +147,10 @@
   </div>
 
   <div class="caseStudy">
-    <div class="studyImage"style="background-image:url(/assets/pool.png);">
+    <div class="studyImage"style="background-image:url(assets/pool.png);">
     </div>
       <div class="studyInfo">
-        <img class="logo" src="/assets/11FS.png" alt="11:FS">
+        <img class="logo" src="assets/11FS.png" alt="11:FS">
         <h4>Userpool: a pool of user testers! </h4>
         <p>Led the building of a scalable content machine for 11:FS's UX research platform, Pulse.</p>
       </div>
@@ -178,24 +178,24 @@
   <!-- About me, Why development?, Showcase what you’ve learnt so far-->
 <div class="carousel">
   <button class="carousel__button carousel__button--left is-hidden">
-    <img src="/assets/left.svg" alt="">
+    <img src="assets/left.svg" alt="">
   </button>
   
 <div class="carousel__track-container">
 <ul class="carousel__track">
   <li class="carousel__slide current-slide ">
-    <img class="carousel__copy" src="/assets/Me.png">
+    <img class="carousel__copy" src="assets/Me.png">
   </li>
   <li class="carousel__slide">
-    <img class="carousel__copy" src="/assets/Why_.png">
+    <img class="carousel__copy" src="assets/Why_.png">
   </li>
   <div class="carousel__slide">
-    <img class="carousel__copy" src="/assets/Learnt.png">
+    <img class="carousel__copy" src="assets/Learnt.png">
   </div>
 </ul>
 </div>
 <button class="carousel__button carousel__button--right">
-  <img src="/assets/right.svg" alt="">
+  <img src="assets/right.svg" alt="">
 </button>
   <div class="carousel__nav">
     <button class="carousel__indicator current-slide"></button>
